# ean_ml_2024_t2

./: pyproject.toml
Código/: tarea2.ipynb
