[tool.poetry]
name = "tarea2"
version = "0.1.0"
description = ""
authors = ["Andres Rodriguez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
ucimlrepo = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
